# llm-evolution

./: AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
experiments/: sequence_alignment_kernel_rvv.c
experiments/initial/: best_kernel.c  experiment.txt
experiments/long/: best_kernel.c  experiment.txt
src/llm_evolution/: __init__.py
src/llm_evolution/ai/implementations/: chroma_db.py  embedding.py  llm.py
src/llm_evolution/ai/interfaces/: embedding.py  llm.py  react_llm.py  vector_db.py
src/llm_evolution/algorithm/: evolutionary_algorithm.py
src/llm_evolution/implementations/: evolution_of_kernels.py
src/llm_evolution/interfaces/: crossover.py  evaluation.py  finish_condition.py  initial_population.py  mutation.py  selection.py
tests/integration/: test_ea_with_evolution_of_kernels.py  test_openrouter_llm.py
tests/integration/algorithm/: test_ea_integration.py
tests/unit/: test_evolution_of_kernels.py
tests/unit/ai/interfaces/: test_ai_decorators.py  test_react_llm.py
tests/unit/algorithm/: test_evolutionary_algorithm.py
tests/unit/interfaces/: test_decorators.py
